added results functionality, added more details so each assert has context in the code

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "core-util-is": "^1.0.1",
+    "inherits": "^2.0.1",
     "readable-stream": "^1.1.13",
     "util-extend": "^1.0.1"
   }
