--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "certain"
   ],
   "author": "Sam Newman",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sonewman/certain/issues"
   },
@@ -25,9 +25,6 @@
     "macchiato": "1.0.0"
   },
   "dependencies": {
-    "core-util-is": "^1.0.1",
-    "inherits": "^2.0.1",
-    "readable-stream": "^1.1.13",
-    "util-extend": "^1.0.1"
+    "certain": "^1.0.0"
   }
 }
