--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An Assertion Library",
   "main": "certain.js",
   "scripts": {
-    "test": "macchiato test/"
+    "test": "macchiato test/",
+    "coverage": "istanbul cover macchiato test/"
   },
   "repository": {
     "type": "git",
